2009-12-12  Jonathan Yong  <jon_y@users.sourceforge.net>

        * src/gendef.c (show_usage): Improve help message about -a.

2009-12-12  Kai Tietz  <kai.tietz@onevision.com>

	* src/gendef_def.c: New file.
	* src/gendef.c: Add config.h header.
	Add optional use of libmangle.
	Improved output of .def files.
	Ouput forwarders, too.

2009-12-12  Jonathan Yong  <jon_y@users.sourceforge.net>

	* configure.ac: Check for libmangle install.
	* Makefile.am: Add libmangle dependencies.

	* Makefile.am: Add gendef_def.c dependencies.
	* configure: Regenerate.
	* Makefile.in: Ditto.
	* config.h.in: Ditto.

2009-12-11  Kai Tietz  <kai.tietz@onevision.com>

	* src/gendef.c (assume_stdcall): New variable.
	(opt_chain): Check for -a and --assume-stdcall option.
	(disassembleRetIntern): Use assume_stdcall for ret.

2009-12-10  Kai Tietz  <kai.tietz@onevision.com>

        * src/gendef.c (decodeMemonic): Fixed typo.
        (Additionally added more debug output)

2009-12-01  Jonathan Yong  <jon_y@users.sourceforge.net>

	* src/gendef.c (show_usage): New.
	(main): Use show_usage.
	(opt_chain): use show_usage.

2009-09-02  Kai Tietz  <kai.tietz@onevision.com>

	* src/gendef.c (disassembleRetIntern): Pre-initialize local
	variables by zero.

2009-08-17  Kai Tietz  <kai.tietz@onevision.com>

	* gendef.h, gendef.c: Add BSD license.
	* COPYING: New file.

2009-02-18  Kai Tietz  <kai.tietz@onevision.com>

	* gendef.c (main): Check if gPEDta or gPEPDta is
	valid, before trying to dump.

2009-01-15  Kai Tietz  <kai.tietz@onevision.com>

	* gendef.c (is_reloc): New.
	(is_data): Check if va is relocated.

2009-01-14  Kai Tietz  <kai.tietz@onevision.com>

	* gendef.h (IMAGE_FIRST_SECTION): Added.
	(Gendefopts): Added.
	(sExportName): Moved from gendef.c.
	(eOpCodeKind): Likewise.
	(sAddresses): Likewise.
	* gendef.c: Remove unused nacro,
	(IMAGE_DIRECTORY_ENTRY_EXPORT): Removed.
	(sExportName): Moved to header.
	(eOpCodeKind): Likewise.
	(sAddresses): Likewise.
