@@ -379,5 +379,6 @@ typedef struct sAddresses {
 } sAddresses;
 
 int gendef_getsymbol_info (const char *dllname, const char *symbolname, int *isData, uint32_t *at);
+int gendef_addpath_def (const char *path);
 
 #endif
